# actix-web-middleware-slogger

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  logger.rs  wrapper.rs
